--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "myApp",
   "version": "0.0.1",
   "private": true,
+  "description": "An Ionic project",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -19,6 +20,7 @@
     "@ionic/vue-router": "^5.4.0",
     "core-js": "^3.6.5",
     "date-fns": "^2.23.0",
+    "register-service-worker": "^1.7.1",
     "vue": "^3.2.1",
     "vue-router": "^4.0.0-0"
   },
@@ -30,6 +32,7 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-e2e-cypress": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-pwa": "^4.5.13",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-unit-jest": "~4.5.0",
@@ -41,6 +44,5 @@
     "eslint-plugin-vue": "^7.0.0-0",
     "typescript": "^4.3.5",
     "vue-jest": "^5.0.0-0"
-  },
-  "description": "An Ionic project"
+  }
 }
